--- a/axeKnight.html
+++ b/axeKnight.html
@@ -432,7 +432,7 @@ player.sHeight = 276
   }
   
   
-  if (player.jumping === true) {
+  /*if (player.jumping === true) {
     if (controller.right === false && controller.left === false)
     {
      if (player.face === 'right'){
@@ -450,7 +450,7 @@ player.sHeight = 276
      player.frame = 9
     }
     }
-  }
+  }*/
  
    if (controller.left) {
  if (player.x <= 20) {
