--- a/axeKnight.html
+++ b/axeKnight.html
@@ -459,10 +459,10 @@ player.sHeight = 276
  } else {
    player.x_velocity -= 5.4; 
   player.face = 'left'
- if (player.frame <= 6 || player.frame >= 10) {
-  player.frame = 7
-  }
- player.frame++
+ //if (player.frame <= 6 || player.frame >= 10) {
+  player.frame = 13
+  //}
+// player.frame++
  }
  }
  
@@ -473,10 +473,10 @@ player.sHeight = 276
   } else {
   player.x_velocity += 5.4;
 player.face = 'right';
-   if (player.frame >= 5){
-    player.frame = 2
-   }
-   player.frame++
+  // if (player.frame >= 5){
+    player.frame = 11
+  // }
+   //player.frame++
    
 }
    }}
