--- a/axeKnight.html
+++ b/axeKnight.html
@@ -11,7 +11,7 @@
  
  //SET UP
  var axe_image = new Image();
- axe_image.src = ''
+ axe_image.src = 'axe.png'
  var death_image = new Image();
  death_image.src = 'https://static-cdn.jtvnw.net/jtv_user_pictures/e91a3dcf-c15a-441a-b369-996922364cdc-profile_image-300x300.png'
  var pause = false;
@@ -462,8 +462,8 @@ player.face = 'right';
 }
    }}
  
- function attackAnimation = {
-  c.drawImage()
+ function attackAnimation() {
+ // c.drawImage(axe_image, rightAxe.x, rightAxe.y, )
   
   
  }
