--- a/axeKnight.html
+++ b/axeKnight.html
@@ -137,8 +137,8 @@ controller = {
 
  function animation() {
   
-  var axeRightX = player.x
-  var axeRightY = player.y
+  var rightAxeX = player.x
+  var rightAxeY = player.y
 
    //DIFFERENT SCREENS
   
