--- a/axeKnight.html
+++ b/axeKnight.html
@@ -93,8 +93,8 @@
  //AXE
  
  var rightAxe = {
- x: rightAxeX,
- y: rightAxeY,
+ x: player.x,
+ y: player.y,
  width: 1609,
  height: 335,
  };
@@ -137,9 +137,6 @@ controller = {
 
  function animation() {
   
-  var rightAxeX = player.x
-  var rightAxeY = player.y
-
    //DIFFERENT SCREENS
   
   
