--- a/axeKnight.html
+++ b/axeKnight.html
@@ -469,9 +469,9 @@ player.face = 'right';
  
  
 function attackAnimation() {
-if (controller.attack){
+//if (controller.attack){
 drawRightAxe();
-} 
+//} 
  }
  
  setInterval(attackAnimation, 30)
