--- a/axeKnight.html
+++ b/axeKnight.html
@@ -93,6 +93,11 @@
  //AXE
  
  var rightAxe = {
+ frame: 0, 
+ sx: 0,
+ sy: 0,
+ sWidth: 0,
+ sHeight: 0, 
  x: 500,
  y: 500,
  width: 1609,
@@ -100,7 +105,7 @@
  }
  
  function drawRightAxe() { 
-  c.drawImage(axe_image, rightAxe.x, rightAxe.y, rightAxe.width, rightAxe.height)
+  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, rightAxe.x, rightAxe.y, rightAxe.width, rightAxe.height)
  }
  
  //CONTROLLER
@@ -299,9 +304,48 @@ enemy.x += enemy.x_velocity;
   
  c.clearRect(0,0, canvas.width, canvas.height);
    
- 
-
-
+ if (rightAxe.frame === 0) {
+rightAxe.sx = 0
+rightAxe.sy = 0
+rightAxe.sWidth = 0
+right axe.sHeight = 0 
+ }
+ if (rightAxe.frame === 1) {
+rightAxe.sx = 0
+rightAxe.sy = 0
+rightAxe.sWidth =230
+right axe.sHeight = 197
+ }
+ if (rightAxe.frame === 2) {
+rightAxe.sx = 245 
+rightAxe.sy = 45
+rightAxe.sWidth = 252 
+right axe.sHeight = 160
+ }
+ if (rightAxe.frame === 3) {
+rightAxe.sx = 508
+rightAxe.sy = 95
+rightAxe.sWidth = 262
+right axe.sHeight = 105
+ }
+ if (rightAxe.frame === 4) {
+rightAxe.sx = 
+rightAxe.sy =
+rightAxe.sWidth =
+right axe.sHeight = 
+ }
+ if (rightAxe.frame === 5) {
+rightAxe.sx = 
+rightAxe.sy =
+rightAxe.sWidth =
+right axe.sHeight = 
+ }
+ if (rightAxe.frame === 6) {
+rightAxe.sx = 
+rightAxe.sy =
+rightAxe.sWidth =
+right axe.sHeight = 
+ }
   
   if (player.frame === 1){  
 player.sx = 0
@@ -471,9 +515,13 @@ player.face = 'right';
  
  
 function attackAnimation() {
-//if (controller.attack){
-
-//} 
+if (controller.attack){
+rightAxe.frame = 1
+rightAxe.frame++
+ if (rightAxe.frame >= 3){
+ controller.attack = false;
+ }
+} 
  }
  
  setInterval(attackAnimation, 30)
