--- a/axeKnight.html
+++ b/axeKnight.html
@@ -314,37 +314,37 @@ rightaxe.sHeight = 0
 rightAxe.sx = 0
 rightAxe.sy = 0
 rightAxe.sWidth =230
-right axe.sHeight = 197
+rightAxe.sHeight = 197
  }
  if (rightAxe.frame === 2) {
 rightAxe.sx = 245 
 rightAxe.sy = 45
 rightAxe.sWidth = 252 
-right axe.sHeight = 160
+rightAxe.sHeight = 160
  }
  if (rightAxe.frame === 3) {
 rightAxe.sx = 508
 rightAxe.sy = 95
 rightAxe.sWidth = 262
-right axe.sHeight = 105
+rightAxe.sHeight = 105
  }
  if (rightAxe.frame === 4) {
 rightAxe.sx = 
 rightAxe.sy =
 rightAxe.sWidth =
-right axe.sHeight = 
+rightAxe.sHeight = 
  }
  if (rightAxe.frame === 5) {
 rightAxe.sx = 
 rightAxe.sy =
 rightAxe.sWidth =
-right axe.sHeight = 
+rightAxe.sHeight = 
  }
  if (rightAxe.frame === 6) {
 rightAxe.sx = 
 rightAxe.sy =
 rightAxe.sWidth =
-right axe.sHeight = 
+rightAxe.sHeight = 
  }
   
   if (player.frame === 1){  
