--- a/axeKnight.html
+++ b/axeKnight.html
@@ -329,22 +329,22 @@ rightAxe.sWidth = 262
 rightAxe.sHeight = 105
  }
  if (rightAxe.frame === 4) {
-rightAxe.sx = 
-rightAxe.sy =
-rightAxe.sWidth =
-rightAxe.sHeight = 
+rightAxe.sx = 0
+rightAxe.sy = 0
+rightAxe.sWidth = 0
+rightAxe.sHeight = 0 
  }
  if (rightAxe.frame === 5) {
-rightAxe.sx = 
-rightAxe.sy =
-rightAxe.sWidth =
-rightAxe.sHeight = 
+rightAxe.sx = 0
+rightAxe.sy = 0
+rightAxe.sWidth = 0
+rightAxe.sHeight = 0
  }
  if (rightAxe.frame === 6) {
-rightAxe.sx = 
-rightAxe.sy =
-rightAxe.sWidth =
-rightAxe.sHeight = 
+rightAxe.sx = 0
+rightAxe.sy = 0
+rightAxe.sWidth = 0
+rightAxe.sHeight = 0
  }
   
   if (player.frame === 1){  
