--- a/axeKnight.html
+++ b/axeKnight.html
@@ -98,14 +98,14 @@
  sy: 0,
  sWidth: 0,
  sHeight: 0, 
- x: 500,
- y: 500,
+ x: player.x,
+ y: player.y,
  width: 1609,
  height: 335,
  }
  
  function drawRightAxe() { 
-  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, rightAxe.x, rightAxe.y, rightAxe.width, rightAxe.height)
+  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, rightAxe.x, rightAxe.y, rightAxe.sWidth, rightAxe.sHeight)
  }
  
  //CONTROLLER
