--- a/axeKnight.html
+++ b/axeKnight.html
@@ -522,7 +522,9 @@ rightAxe.frame++
  controller.attack = false;
   
  }
+ controller.attack = false;
 } 
+ 
  }
  
  setInterval(attackAnimation, 30)
