--- a/axeKnight.html
+++ b/axeKnight.html
@@ -515,6 +515,9 @@ player.face = 'right';
  
  
 function attackAnimation() {
+ if (controller.attack === false){
+  rightAxe.frame = 0
+ }
 if (controller.attack){
 rightAxe.frame = 1
 rightAxe.frame = rightAxe.frame + 1
