--- a/axeKnight.html
+++ b/axeKnight.html
@@ -105,7 +105,7 @@
  }
  
  function drawRightAxe() { 
-  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, player.x, player.y, rightAxe.sWidth, rightAxe.sHeight)
+  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, player.x + 10, player.y + 30, rightAxe.sWidth, rightAxe.sHeight)
  }
  
  //CONTROLLER
