--- a/axeKnight.html
+++ b/axeKnight.html
@@ -518,12 +518,12 @@ function attackAnimation() {
  
 if (controller.attack){
 rightAxe.frame = 1
-rightAxe.frame = 2
-rightAxe.frame = 3
-rightAxe.frame = 4
-rightAxe.frame = 5
-rightAxe.frame = 6
-rightAxe.frame = 0
+//rightAxe.frame = 2
+//rightAxe.frame = 3
+//rightAxe.frame = 4
+//rightAxe.frame = 5
+//rightAxe.frame = 6
+//rightAxe.frame = 0
 
 } 
  
