--- a/axeKnight.html
+++ b/axeKnight.html
@@ -105,7 +105,7 @@
  }
  
  function drawRightAxe() { 
-  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, player.x + 40, player.y, rightAxe.sWidth, rightAxe.sHeight)
+  c.drawImage(axe_image, rightAxe.sx, rightAxe.sy, rightAxe.sWidth, rightAxe.sHeight, player.x, player.y, rightAxe.sWidth, rightAxe.sHeight)
  }
  
  //CONTROLLER
@@ -314,37 +314,37 @@ rightAxe.sHeight = 0
 rightAxe.sx = 0
 rightAxe.sy = 0
 rightAxe.sWidth =230
-rightAxe.sHeight = 197
+rightAxe.sHeight = 335
  }
  if (rightAxe.frame === 2) {
 rightAxe.sx = 245 
-rightAxe.sy = 45
+rightAxe.sy = 0
 rightAxe.sWidth = 252 
-rightAxe.sHeight = 160
+rightAxe.sHeight = 335
  }
  if (rightAxe.frame === 3) {
 rightAxe.sx = 508
-rightAxe.sy = 95
+rightAxe.sy = 0
 rightAxe.sWidth = 262
-rightAxe.sHeight = 105
+rightAxe.sHeight = 335
  }
  if (rightAxe.frame === 4) {
 rightAxe.sx = 790
-rightAxe.sy = 110
+rightAxe.sy = 0
 rightAxe.sWidth = 265
-rightAxe.sHeight = 120 
+rightAxe.sHeight = 335
  }
  if (rightAxe.frame === 5) {
 rightAxe.sx = 1090
-rightAxe.sy = 155
+rightAxe.sy = 0
 rightAxe.sWidth = 257
-rightAxe.sHeight = 127
+rightAxe.sHeight = 335
  }
  if (rightAxe.frame === 6) {
 rightAxe.sx = 1370
-rightAxe.sy = 175
+rightAxe.sy = 0
 rightAxe.sWidth = 250
-rightAxe.sHeight = 173
+rightAxe.sHeight = 335
  }
   
   if (player.frame === 1){  
