--- a/axeKnight.html
+++ b/axeKnight.html
@@ -516,14 +516,14 @@ player.face = 'right';
  
 function attackAnimation() {
  
-if (controller.attack){
-//rightAxe.frame = 1
+if (controller.attack === true && player.face === 'right'){
+rightAxe.frame = 1
 rightAxe.frame = 2
-//rightAxe.frame = 3
-//rightAxe.frame = 4
-//rightAxe.frame = 5
-//rightAxe.frame = 6
-//rightAxe.frame = 0
+rightAxe.frame = 3
+rightAxe.frame = 4
+rightAxe.frame = 5
+rightAxe.frame = 6
+rightAxe.frame = 0
 
 } 
  
