--- a/axeKnight.html
+++ b/axeKnight.html
@@ -152,7 +152,7 @@ controller = {
   
 if (enemy.health === 0) {
 confirm("You won! I'm still figuring out what to do when then enemy dies, so for now I guess you beat the game!")
- enemy.health++3
+ enemy.health++
 }
   
   
