--- a/axeKnight.html
+++ b/axeKnight.html
@@ -537,19 +537,9 @@ player.face = 'right';
 function attackAnimation() {
 
  if (controller.attack === true && player.face === 'right' && axeStall === false){
-rightAxe.frame = 1
-setTimeout(function() {rightAxe.frame = 2
-                       setTimeout(function() {rightAxe.frame = 3
-                                              setTimeout(function() {rightAxe.frame = 4
-                                                                     setTimeout(function() {rightAxe.frame = 5
-                                                                                            setTimeout(function() {rightAxe.frame = 6
-                                                                                                                   setTimeout(function() {rightAxe.frame = 0
-                                                                                                                                          
 
-axeStall = true
-setTimeout(function() {axeStall = false}, 100) }, 30) }, 30)}, 30) }, 30) }, 30) }, 30) 
-
-
+  rightAxe.frame = 5
+  setTimeout(function() {controller.attack = false, player.axeStall})
   
 }
  
