--- a/axeKnight.html
+++ b/axeKnight.html
@@ -539,7 +539,7 @@ function attackAnimation() {
  if (controller.attack === true && player.face === 'right' && axeStall === false){
 
   rightAxe.frame = 5
-  setTimeout(function() {controller.attack = false, player.axeStall})
+  setTimeout(function() {controller.attack = false, 1000)
   
 }
  
