--- a/axeKnight.html
+++ b/axeKnight.html
@@ -250,7 +250,7 @@ enemy.x += enemy.x_velocity;
    }
    
   
-   //ATTACK ANIMATION
+
    
   
   //COLLISION DETECTION
@@ -477,19 +477,22 @@ player.sHeight = 276
    player.health += 1000;
   }
  
-  if (controller.attack === true && player.face === 'right' && axeStall === false){
-
-  rightAxe.frame = 5;
-  setTimeout(function() { controller.attack = false }, 100) 
-}         
- 
  
  if (controller.attack === false) {
   
   rightAxe.frame = 0;
- }
  
  }
+  
+   if (controller.attack === true && player.face === 'right' && axeStall === false){
+rightAxe.frame = 1
+    setTimeout(function() {rightAxe.frame = 2
+                          setTimeout(function() {rightAxe.frame = 3
+                                                setTimeout(function() {rightAxe.frame = 4
+                                                                      setTimeout(function() {rightAxe.frame = 5
+                                                                                            setTimeout(function() {rightAxe.frame = 6})}, 100)}, 100)}, 100)}, 100)
+                                                                                           
+}         
  
  //PLAYER RUNNING ANIMATION
  
@@ -548,10 +551,10 @@ player.face = 'right';
  
 //function attackAnimation() {
 
- 
+
 //}
  
-// setInterval(attackAnimation, 30)
+ //setInterval(attackAnimation, 30)
  setInterval(animation, 30)
  setInterval(playerMovement, 150)
 
