--- a/axeKnight.html
+++ b/axeKnight.html
@@ -485,15 +485,10 @@ player.sHeight = 276
  }
   
    if (controller.attack === true && player.face === 'right' && axeStall === false){
-rightAxe.frame = 1
-    setTimeout(function() {rightAxe.frame = 2
-                          setTimeout(function() {rightAxe.frame = 3
-                                                setTimeout(function() {rightAxe.frame = 4
-                                                                      setTimeout(function() {rightAxe.frame = 5
-                                                                                            setTimeout(function() {rightAxe.frame = 6})}, 100)}, 100)}, 100)}, 100)
-                                                                                           
-}         
- 
+  
+   rightAxe.frame = 5;
+   }
+  
  //PLAYER RUNNING ANIMATION
  
  function playerMovement() {
