--- a/rockpapersissors.html
+++ b/rockpapersissors.html
@@ -42,7 +42,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
   confirm("You lost, the computer chose paper!")
   computerScore++ 
 } if (playerChoice === "ROCK" && computerChoice === "Scissors") {
-  confirm("You won, The computer choose sissors!")
+  confirm("You won, The computer choose scissors!")
   playerScore++
 } if (playerChoice === "PAPER" && computerChoice === "Rock") {
   confirm("You won, the computer chose rock!")
@@ -50,7 +50,7 @@ if (playerChoice === "ROCK" && computerChoice === "Rock") {
 } if (playerChoice === "PAPER" && computerChoice === "Paper") {
   confirm("It's a tie, you both chose paper!")
 } if (playerChoice === "PAPER" && computerChoice === "Scissors") {
-  confirm("You lost, the computer chose sissors!")
+  confirm("You lost, the computer chose scissors!")
   computerScore++
 } if (playerChoice === "SCISSORS" && computerChoice === "Rock") {
   confirm("You lost, the computer chose rock!")
