--- a/axeKnight.html
+++ b/axeKnight.html
@@ -484,9 +484,10 @@ player.sHeight = 276
  
  }
   
-   if (controller.attack === true && player.face === 'right' && axeStall === false){
+   if (controller.attack === true && player.face === 'right'){
   
    rightAxe.frame = 5;
+   
    }
   
  //PLAYER RUNNING ANIMATION
