--- a/axeKnight.html
+++ b/axeKnight.html
@@ -544,7 +544,7 @@ player.face = 'right';
    }
   }
 
-  if (controller.attack = false) {
+  if (controller.attack === false) {
    rightAxe.frame = 0
   }
  
