--- a/axeKnight.html
+++ b/axeKnight.html
@@ -538,6 +538,7 @@ player.face = 'right';
     rightAxe.frame++   
     if (rightAxe.frame > 5){
     controller.attack = false
+     rightAxe.frame = 0
     }
    }if (player.face === 'left'){
     console.log("I don't have the axes facing this way yet")
