--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>PLACEHOLDER</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   <button type="button" class="play_btn" onclick="startGameFunction()">Play</button>
