--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1 class="play_btn">Did this turn red?</h1>
   <button type="button" class="play_btn" onclick="startGameFunction()">Play</button>
     <script>
     function startGameFunction() {
