--- a/index.html
+++ b/index.html
@@ -3,18 +3,7 @@
     <title>PLACEHOLDER</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
-    <br>
-    <br> 
-    <br> 
-    <br> 
-    <br> 
-    <br> 
-  <button type="button" class="play_btn" onclick="startGameFunction()">Play</button>
-    <script>
-    function startGameFunction() {
-      alert("this worked")
-    }
-    </script>
+  <body> 
+  <button type="button" href="./game.html" class="play_btn" onclick="startGameFunction()">Play</button>
   </body>
 </html>
