--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body> 
-  <button type="button" href="./game.html" class="play_btn" onclick="startGameFunction()">Play</button>
+  <button type="button" href="./game.html" class="play_btn">Play</button>
   </body>
 </html>
