--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <title>PLACEHOLDER</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body> 
-  <button type="button" href="./game.html" class="play_btn">Play</button>
+  <body>
+    <a href="./game.html">
+  <button type="button" class="play_btn">Play</button>
+      </a>
   </body>
 </html>
