--- a/game.html
+++ b/game.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>PLACEHOLDER</title>
+    <title>game</title>
+     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-  <button type="button" cose="back_btn" href="./index.html"><button>
+    <a href="./index.html">
+  <button type="button" cose="back_btn"><button>
+    </a>
     <script>
     
     </script>
