--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <a href="./index.html">
-  <button type="button" cose="back_btn"><button>
+  <button type="button" class="back_btn"><button>
     </a>
     <script>
     
