--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
   <body>
     
     <a href="./index.html">
-  <button type="button" class="back_btn"><button>
+  <button type="button" class="back_btn">Back<button>
     </a>
     
     <script>
