--- a/game.html
+++ b/game.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
 <html>
   <head>
-    <title>game</title>
-     <link rel="stylesheet" href="style.css">
+    <title>PLACEHOLDER</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
     <a href="./index.html">
-  <button type="button" class="back_btn">Back<button>
-    </a>
-    
+  <button type="button" class="back_btn">Back</button>
+      </a>
   </body>
 </html>
