--- a/game.html
+++ b/game.html
@@ -4,8 +4,14 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <canvas id="canvas" class="game_canvas" height="500" width="500"></canvas>
     <a href="./index.html">
   <button type="button" class="back_btn">Back</button>
       </a>
+    
+    <script>
+      var c = document.getElementById("canvas");
+      var ctx = c.getContext("2d");
+      </script>
   </body>
 </html>
