--- a/game.html
+++ b/game.html
@@ -14,6 +14,8 @@
     <script>
       var c = document.getElementById("canvas");
       var ctx = c.getContext("2d");
+      ctx.fillStyle = "#cccccc";
+      ctx.fillRect(0, 0, 500, 500);
       </script>
   </body>
 </html>
