--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
       x: 250,
       y:250,
       draw: function() {
-      ctx.drawImage(player_img, this..x, this.y, this.width, this.height)
+      ctx.drawImage(player_img, this.x, this.y, this.width, this.height)
       }
     }
     </script>
