--- a/game.html
+++ b/game.html
@@ -20,7 +20,7 @@
       ctx.fillStyle = "#cccccc";
       ctx.fillRect(0, 0, 500, 500);
       
-      var player_img = new Image;
+      var player_img = new Image();
       player_img.src = "https://kawaii.kawaii.at/img/solid-red-fabric-Robert-Kaufman-USA-Red-179485-1.JPG"
       
     var player = {
