--- a/game.html
+++ b/game.html
@@ -32,6 +32,8 @@
       ctx.drawImage(player_img, this.x, this.y, this.width, this.height)
       }
     }
+    player.draw;
+    
     </script>
   </body>
 </html>
