--- a/game.html
+++ b/game.html
@@ -32,7 +32,7 @@
       ctx.drawImage(player_img, this.x, this.y, this.width, this.height)
       }
     }
-    player.draw;
+    setInterval(function() {player.draw()}, 1000);
     
     </script>
   </body>
