--- a/game.html
+++ b/game.html
@@ -46,9 +46,9 @@
     //COIN
     
     var coin_img = new Image();
-    coin_img.src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwiUp8_-nr7hAhVGTd8KHcOaA6wQjRx6BAgBEAU&url=https%3A%2F%2Fcolourlex.com%2Fproject%2Fcadmium-yellow%2F&psig=AOvVaw23t0QKjl5P4Z7TpN43_NTV&ust=1554735200655755"  
+    coin_img.src = "https://banner2.kisspng.com/20180603/zxk/kisspng-pixel-art-clip-art-mario-coin-5b13914d06b754.1872973915280090370275.jpg"    
     
-    var coin = {
+      var coin = {
      x: Math.floor((Math.random() * 500) + 1),
      y: Math.floor((Math.random() * 500) + 1),
      height: 10,
