--- a/game.html
+++ b/game.html
@@ -84,6 +84,18 @@
       case 40:// down key
         controller.down = key_state;
       break;
+      case 65:// left key
+        controller.left = key_state;
+      break;
+      case 87:// up key
+        controller.up = key_state;
+      break;
+      case 68:// right key
+        controller.right = key_state;
+      break;
+      case 83:// down key
+        controller.down = key_state;
+      break;  
 
     }
 
