--- a/game.html
+++ b/game.html
@@ -46,8 +46,7 @@
     //COIN
     
     var coin_img = new Image();
-    coin_img.src = "https://banner2.kisspng.com/20180603/zxk/kisspng-pixel-art-clip-art-mario-coin-5b13914d06b754.1872973915280090370275.jpg"    
-    
+    coin_img.src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwirjcv_rsDhAhXyTN8KHSWpCWAQjRx6BAgBEAU&url=https%3A%2F%2Fen.wikipedia.org%2Fwiki%2FYellow_(Scandal_album)&psig=AOvVaw3bBXx0PFFLY7EYvBjk1592&ust=1554808454272937"
       var coin = {
      x: Math.floor((Math.random() * 500) + 1),
      y: Math.floor((Math.random() * 500) + 1),
