--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
     //COIN
     
     var coin_img = new Image();
-    coin_img.src = "https://www.google.com/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwjP5ZGir8DhAhWxTt8KHSEvDOwQjRx6BAgBEAU&url=https%3A%2F%2Fwww.kisspng.com%2Fpng-symbol-trademark-yellow-coin-us-dollar-618315%2Fdownload-png.html&psig=AOvVaw0zX26-UMPgxs-YqcJMzYm-&ust=1554808525712785"
+    coin_img.src = "coin.png"
       var coin = {
      x: Math.floor((Math.random() * 500) + 1),
      y: Math.floor((Math.random() * 500) + 1),
