--- a/game.html
+++ b/game.html
@@ -46,7 +46,7 @@
     //COIN
     
     var coin_img = new Image();
-    coin_img.src = "coin.png"
+    coin_img.src = "https://icon2.kisspng.com/20180319/vxe/kisspng-symbol-trademark-yellow-coin-us-dollar-5ab051799eabd7.5409505115215046336499.jpg"
       var coin = {
      x: Math.floor((Math.random() * 500) + 1),
      y: Math.floor((Math.random() * 500) + 1),
