--- a/game.html
+++ b/game.html
@@ -66,7 +66,7 @@
     coin_img.src = "https://icon2.kisspng.com/20180319/vxe/kisspng-symbol-trademark-yellow-coin-us-dollar-5ab051799eabd7.5409505115215046336499.jpg"
       var coin = {
      x: Math.floor((Math.random() * 500) + 1),
-     y: Math.floor((Math.random() * 500) + 1)s,
+     y: Math.floor((Math.random() * 500) + 1),
      height: 15,
      width: 15,
      draw: function() {
