--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
      //BULLET
       
       var bullet_img = new Image();
-      buttle_img.src = "https://upload.wikimedia.org/wikipedia/en/8/8b/Purplecom.jpg"
+      bellet_img.src = "https://upload.wikimedia.org/wikipedia/en/8/8b/Purplecom.jpg"
       
       var bullet = {
        height: 10,
