--- a/game.html
+++ b/game.html
@@ -52,8 +52,8 @@
       var bullet = {
        height: 10,
        width: 10,
-       x: player.x,
-       y: player.y, 
+       x: player.x + 10,
+       y: player.y + 10, 
        draw: function() {
         ctx.drawImage(bullet_img, this.x, this.y, this.width, this.height) 
        }
