--- a/game.html
+++ b/game.html
@@ -161,8 +161,8 @@
         
         player.x += player.x_speed;
         player.y += player.y_speed;
-        player.x = bullet.x
-        player.y = bullet.y
+        bullet.x = player.x
+        bullet.y = player.y 
         player.x_speed *= 0.9;
         player.y_speed *= 0.9;
         
